# ConfiguratorJson

./: .gitignore  CMakeLists.txt  ConfiguratorJson.h  README.md
ConfiguratorJson/: ConfiguratorJson.h  Optional.h
tests/: .gitignore  CMakeLists.txt  Makefile  TestConfig.cpp  TestConfig3.cpp  TestConfigJS.cpp  TestConfigJS2.cpp  TestConfigJS3.cpp  main.cpp  runtests.sh  testOptional.cpp  testOptionalCJS.cpp
